--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="Styles/style.css">
     <link rel="shortcut icon" href="https://img.icons8.com/?size=48&id=v8RpPQUwv0N8&format=png" type="image/x-icon">
 </head>
+
 <body>
-    <h3>I am a Programmer..</h3>
+
+    <div class="heading">
+        <h3>I am a Programmer..</h3>
+        <button class="btn">Hire me now..</button>
+    </div>
+    
 </body>
 </html>
